# echoclip

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
assets/: echoclip-autostart.desktop  echoclip.desktop
scripts/: build-release.sh  install-deps-arch.sh  install-deps-debian.sh  install-deps-fedora.sh  install.sh  uninstall.sh
src/echoclip/: __init__.py  app.py  clipboard_manager.py
tests/: test_clipboard_manager.py
